# ai-engineering-m1-project-mauro-moyano

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
metrics/: metrics.json
prompts/: bad_words.txt  injection_phrases.txt  main_prompt.txt  system_prompt.txt
reports/: PI_report_en.md
src/: __init__.py  run_query.py  safety.py
tests/: test_core.py  test_example.py  test_safety.py
